tests/ui/associated-type-bounds/return-type-notation/path-no-qself.stderr
error[E0223]: ambiguous associated type
  --> $DIR/path-no-qself.rs:9:5
   |
LL |     Trait::method(..): Send,
   |     ^^^^^^^^^^^^^^^^^
   |
help: if there were a type named `Example` that implemented `Trait`, you could use the fully-qualified path
   |
LL -     Trait::method(..): Send,
LL +     <Example as Trait>::method(..): Send,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0223`.
